--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,10 +68,10 @@ endif()
 find_package(Qt5 REQUIRED COMPONENTS Widgets)
 
 # Tell CMake to create the saper executable
-add_executable(saper main.cpp mainwindow.cpp mainwindow.ui resources.qrc cage.cpp cage.h board.cpp board.h qrightclickbutton.h qrightclickbutton.cpp)
+add_executable(Saper main.cpp mainwindow.cpp mainwindow.ui resources.qrc cage.cpp cage.h board.cpp board.h qrightclickbutton.h qrightclickbutton.cpp)
 
 # Add the Qt5 Widgets for linking
-target_link_libraries(saper Qt5::Widgets)
+target_link_libraries(Saper Qt5::Widgets)
 
 # Trivial example using gtest and gmock
  add_executable(exampletest exampletest.cpp board.h board.cpp cage.cpp cage.h mainwindow.cpp mainwindow.h mainwindow.ui qrightclickbutton.h qrightclickbutton.cpp)
